--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: 3.9
 services:
   node-exporter:
     container_name: "node-exporter"
@@ -15,17 +16,17 @@ services:
       - "--path.sysfs=/host/sys"
       - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)"
 
-    telegraf:
-      container_name: telegraf-vpn
-      image: telegraf
-      restart: unless-stopped
-      network_mode: host
-      cap_add:
-        - NET_ADMIN
-        - NET_RAW
-      user: "0:0"
-      environment:
-        - INFLUXDB_NETWORK=${INFLUXDB_NETWORK}
-      volumes:
-        - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
-        - /etc/wireguard:/etc/wireguard:ro
+   telegraf:
+    container_name: telegraf-vpn
+    image: telegraf
+    restart: unless-stopped
+    network_mode: host
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
+    user: "0:0"
+    environment:
+      - INFLUXDB_NETWORK=${INFLUXDB_NETWORK}
+    volumes:
+      - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      - /etc/wireguard:/etc/wireguard:ro
