--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -10,7 +10,7 @@
 
 # --- WireGuard (wg0) ---
 [[inputs.wireguard]]
-  interfaces = ["wg0"]
+  devices = ["wg0"]
   interval = "30s"
   [inputs.wireguard.tags]
     domain = "network"
