--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: 3.9
 services:
   node-exporter:
     container_name: "node-exporter"
@@ -17,6 +16,7 @@ services:
       - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)"
 
   telegraf:
+    env_file: [.env]
     container_name: telegraf-vpn
     image: telegraf
     restart: unless-stopped
@@ -25,6 +25,8 @@ services:
       - NET_ADMIN
       - NET_RAW
     user: "0:0"
+    security_opt:
+      - seccomp=unconfined
     environment:
       - INFLUXDB_NETWORK=${INFLUXDB_NETWORK}
     volumes:
