--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,16 @@ services:
       - "--path.sysfs=/host/sys"
       - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)"
 
+  wgexporter:
+    image: mindflavor/prometheus-wireguard-exporter:latest
+    container_name: wgexporter
+    restart: unless-stopped
+    network_mode: host
+    cap_add:
+      - NET_ADMIN
+    user: "0:0" 
+    command: ["-i","wg0","-d","true"]
+
   telegraf:
     env_file: [.env]
     container_name: telegraf-vpn
