--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,19 @@
 services:
+  docker-proxy:
+    container_name: "docker-proxy"
+    image: "tecnativa/docker-socket-proxy:latest":
+    restart: unless-stopped
+    ports:
+      - "2375:2375"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      - LOG_LEVEL=info
+      - CONTAINERS=1
+      - EVENTS=1
+      - PING=1
+      - INFO=1
+
   node-exporter:
     container_name: "node-exporter"
     image: "prom/node-exporter"
